--- a/index.html
+++ b/index.html
@@ -653,13 +653,14 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">LeadFlow</div>
+            <div class="logo">NishaHomes</div>
             <div class="nav-buttons">
                 <button class="nav-btn active" data-sheet="buying">Buying Leads</button>
                 <button class="nav-btn" data-sheet="rental">Rental Leads</button>
                 <button class="nav-btn" data-sheet="selling">Selling Leads</button>
                 <button class="nav-btn" data-sheet="agent">Agent Leads</button>
                <a href="assigned.html"> <button class="nav-btn">Assigned Leads</button></a>
+               <a href="manageteam.html"> <button class="nav-btn">Manage Team</button></a>
             </div>
         </div>
     </nav>
