--- a/assigned.html
+++ b/assigned.html
@@ -646,6 +646,7 @@
         <div class="nav-container">
             <div class="logo">LeadFlow</div>
             <div class="nav-buttons">
+                <a href="/"> <button class="nav-btn">Home</button></a>
                 <button class="nav-btn active" data-sheet="buying">Buying Leads</button>
                 <button class="nav-btn" data-sheet="rental">Rental Leads</button>
                 <button class="nav-btn" data-sheet="selling">Selling Leads</button>
