--- a/leadjourney.html
+++ b/leadjourney.html
@@ -519,8 +519,8 @@ body {
 </div>
 
 <script>
-const API =
-  "https://script.google.com/macros/s/AKfycbzpQbPRBoRdp6lbQO-zyS4PSLi1LDZUmGIx68Jy4T7zKFZZmWf-wGNE-Z-urfzqYuJv/exec?sheet=endData";
+
+const API = "https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api/end-data";  // ✅ Your backend API
 
 const app = document.getElementById("app");
 
@@ -556,112 +556,8 @@ function getPriorityIndicator(priority) {
   return '🟢';
 }
 
-function renderLead(lead) {
-  const score = parseInt(lead["Lead score"]) || 0;
-  const circumference = 503;
-  const offset = circumference - (score / 100) * circumference;
-  const scoreColor = getScoreColor(score);
-
-  app.innerHTML = `
-    <div class="main-card">
-      <div class="header-section">
-        <div class="header-info">
-          <h1>${lead["Customer Name"] || "Lead"}</h1>
-          <div class="phone">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
-            </svg>
-            ${lead.Number || "N/A"}
-          </div>
-          <div class="priority-badge ${getPriorityClass(lead["Call Priority"])}">
-            ${getPriorityIndicator(lead["Call Priority"])} ${lead["Call Priority"] || "Low"} Priority
-          </div>
-        </div>
-
-        <div class="score-container">
-          <svg class="score-circle" viewBox="0 0 180 180">
-            <circle class="score-bg" cx="90" cy="90" r="80"></circle>
-            <circle 
-              class="score-progress" 
-              cx="90" 
-              cy="90" 
-              r="80"
-              stroke="${scoreColor}"
-              style="--offset: ${offset}"
-            ></circle>
-          </svg>
-          <div class="score-text">
-            <div class="score-value">${score}%</div>
-            <div class="score-label">Lead Score</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="details-grid">
-        ${detailCard("Call attempt", lead["Call_attempt"])}
-        ${detailCard("Property Type", lead["Property Type"])}
-        ${detailCard("Location", lead["Preferred Location"])}
-        ${detailCard("Budget Range", lead["Budget Range"])}
-        ${detailCard("Transaction", lead["Transaction Type"])}
-        ${detailCard("Configuration", lead["Configuration"])}
-        ${detailCard("Interest Level", lead["Interest Level"])}
-      </div>
-
-      <div class="journey-section scroll-reveal">
-        <h2 class="section-title">
-          Lead Journey Timeline
-        </h2>
-        <div class="timeline">
-          ${timelineItem("Call Status", lead["Call Status"])}
-          ${timelineItem("Customer Response", lead["Customer Response"])}
-          ${timelineItem("Objection / Reason", lead["Objection / Reason"])}
-          ${timelineItem("Next Follow-up", lead["Next Follow-up Timeline"])}
-          ${timelineItem("Next Call Date", formatDate(lead["Next Call Date"]))}
-          ${timelineItem("Caller Remarks", lead["Caller Remarks"])}
-        </div>
-      </div>
-    </div>
-  `;
-
-  // Trigger scroll animations
-  setTimeout(() => {
-    const scrollElements = document.querySelectorAll('.scroll-reveal');
-    scrollElements.forEach(el => el.classList.add('active'));
-  }, 100);
-}
-
-function detailCard(label, value) {
-  return `
-    <div class="detail-card">
-      <div class="detail-label">${label}</div>
-      <div class="detail-value">${value || "—"}</div>
-    </div>
-  `;
-}
-
-function timelineItem(title, value) {
-  return `
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <div class="timeline-content">
-        <div class="timeline-title">${title}</div>
-        <div class="timeline-value">${value || "—"}</div>
-      </div>
-    </div>
-  `;
-}
-
-function formatDate(d) {
-  if (!d) return "—";
-  const date = new Date(d);
-  return date.toLocaleDateString('en-US', { 
-    year: 'numeric', 
-    month: 'short', 
-    day: 'numeric' 
-  });
-}
-
 async function init() {
+
   const number = getNumberFromURL();
 
   if (!number) {
@@ -669,13 +565,13 @@ async function init() {
     return;
   }
 
-  app.innerHTML = `<div class="loading">Loading lead journey</div>`;
+  app.innerHTML = `<div class="loading">Loading lead journey...</div>`;
 
   try {
     const res = await fetch(API);
-    const json = await res.json();
+    const leads = await res.json();   // ✅ Direct array from backend
 
-    const lead = json.data.find(
+    const lead = leads.find(
       l => normalize(l.Number) === normalize(number)
     );
 
@@ -685,27 +581,17 @@ async function init() {
     }
 
     renderLead(lead);
+
   } catch (error) {
+    console.error(error);
     app.innerHTML = `<div class="error">❌ Error loading data</div>`;
   }
 }
 
-// Scroll reveal on scroll
-window.addEventListener('scroll', () => {
-  const reveals = document.querySelectorAll('.scroll-reveal:not(.active)');
-  reveals.forEach(element => {
-    const windowHeight = window.innerHeight;
-    const elementTop = element.getBoundingClientRect().top;
-    const elementVisible = 150;
-
-    if (elementTop < windowHeight - elementVisible) {
-      element.classList.add('active');
-    }
-  });
-});
-
 init();
+
 </script>
+
 
 </body>
 </html>
