--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <style>
+<style>
         :root {
             --primary: #2D3142;
             --accent: #EF8354;
@@ -1339,7 +1339,7 @@ const API_CONFIG = {
   try {
 
     // 1️⃣ Insert in teamAssign collection
-    await fetch('https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/assign-lead', {
+    await fetch('https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api/assign-lead', {
   method: 'POST',
   headers: { 'Content-Type': 'application/json' },
   body: JSON.stringify({
