--- a/index.html
+++ b/index.html
@@ -1488,7 +1488,8 @@ async function deleteLead(id) {
         buying: "Leads",
         rental: "RentalLeads",
         selling: "sellingLeads",
-        agent: "agentLeads"
+        agent: "agentLeads",
+        other: "Leads"
     };
 
     const collection = collectionMap[currentSheet];
