--- a/manageteam.html
+++ b/manageteam.html
@@ -236,7 +236,7 @@ a { text-decoration: none; }
 </div>
 
 <script>
-const API = 'https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api';
+const API = 'https://api.phishnix.site/api';
 const list = document.getElementById('teamList');
 
 /* Toast */
