--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@ nav.nav-show {
     </nav>
 
     <div id="bulkBar" style="display:flex;justify-content:flex-end;gap:10px;margin-bottom:20px; margin-right: 40px;">
-    <button id="toggleSelectBtn" class="SelectBtn">Send Template</button>
+    <button id="toggleSelectBtn" class="SelectBtn">Select Template</button>
    
 
     <div id="bulkActions" style="display:none;gap:10px;">
@@ -827,7 +827,7 @@ if ("serviceWorker" in navigator) {
     <script>
         // Configuration - UPDATE THESE WITH YOUR GOOGLE SHEETS URLS
 
-        let BASE_API_URL = "https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api";
+        let BASE_API_URL = "https://api.phishnix.site/api";
 
 const API_CONFIG = {
     buying: `${BASE_API_URL}/leads`,
@@ -1364,7 +1364,7 @@ const API_CONFIG = {
 
       const leadNumbers = Array.from(selectedLeads.keys());
 
-      await fetch(`https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api/bulk-assign-leads`, {
+      await fetch(`https://api.phishnix.site/api/bulk-assign-leads`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
@@ -1382,7 +1382,7 @@ const API_CONFIG = {
     // 🔹 SINGLE MODE
     else {
 
-      await fetch(`https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api/assign-lead`, {
+      await fetch(`https://api.phishnix.site/api/assign-lead`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
@@ -1451,7 +1451,7 @@ const selectedOption = e.target.options[e.target.selectedIndex];
 document.addEventListener("DOMContentLoaded", async () => {
   try {
     const res = await fetch(
-      'https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api/get-team-assign'
+      'https://api.phishnix.site/api/get-team-assign'
     );
 
     const employees = await res.json();
@@ -1495,7 +1495,7 @@ async function deleteLead(id) {
     const collection = collectionMap[currentSheet];
 
     try {
-        const response = await fetch("https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api/delete-lead", {
+        const response = await fetch("https://api.phishnix.site/api/delete-lead", {
             method: "DELETE",
             headers: {
                 "Content-Type": "application/json"
@@ -1589,7 +1589,7 @@ async function loadTemplates(){
 
     try{
 
-        const res = await fetch("https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api/wp-template");
+        const res = await fetch("https://api.phishnix.site/api/wp-template");
         const templates = await res.json();
 
         if(!templates || !Array.isArray(templates)){
@@ -1655,7 +1655,7 @@ document.getElementById("confirmSendBtn").addEventListener("click", async () => 
     let mediaUrl = "";
 
     if (template.media) {
-        mediaUrl = `https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/uploads/${template.media}`;
+        mediaUrl = `https://api.phishnix.site/uploads/${template.media}`;
     }
 
     const finalPayload = {
