--- a/leadjourney.html
+++ b/leadjourney.html
@@ -520,7 +520,7 @@ body {
 
 <script>
 
-const API = "https://pcskkwk4w8gsk0s484kwscgw.coolify.phishnix.site/api/end-data";  // ✅ Your backend API
+const API = "https://api.phishnix.site/api/end-data";  // ✅ Your backend API
 
 const app = document.getElementById("app");
 
