--- a/index.html
+++ b/index.html
@@ -722,6 +722,7 @@ nav.nav-show {
                 <a href="assignehd.html"> <button class="nav-btn">Assigned Leads</button></a>
                <a href="manageteam.html"> <button class="nav-btn">Manage Team</button></a>
                 <a href="addtemplete.html"> <button class="nav-btn">Add Template</button></a>
+                <a href="status.html"> <button class="nav-btn">Team Status</button></a>
            
             </div>
         </div>
